# ostaris

./: .gitignore  CMakeLists.txt  README.MD
src/: main.cpp
